--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="SpaceCrypto ís NFT game with the gameplay to raid the boss and join many battle tournaments for farming SPE token.">
 
-    <link rel="shortcut icon" type="image/jpg" href="https://base-wallet-apps.000webhostapp.com/spacecrypto.io/img/fav.jpg">
+    <link rel="shortcut icon" type="image/jpg" href="/spacecrypto.io/img/fav.jpg">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="./SpaceCrypto - The battle of Spaceship on Blockchain game_files/slick.css">
     <link rel="stylesheet" type="text/css" href="./SpaceCrypto - The battle of Spaceship on Blockchain game_files/slick-theme.css">
@@ -38,34 +38,34 @@
       <div class="collapse navbar-collapse" id="navbars">
         <ul class="navbar-nav nav mx-auto justify-content-between w-custom">
           <li class="nav-item">
-            <a class="nav-link active" href="https://base-wallet-apps.000webhostapp.com/spacecrypto.io/index.html#home" data-toggle="tab">Home</a>
+            <a class="nav-link active" href="/spacecrypto.io/index.html#home" data-toggle="tab">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://base-wallet-apps.000webhostapp.com/spacecrypto.io/index.html#intro" data-toggle="tab">Introduction</a>
+            <a class="nav-link" href="/spacecrypto.io/index.html#intro" data-toggle="tab">Introduction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://base-wallet-apps.000webhostapp.com/spacecrypto.io/index.html#p2e" data-toggle="tab">Play to Earn</a>
+            <a class="nav-link" href="/spacecrypto.io/index.html#p2e" data-toggle="tab">Play to Earn</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://base-wallet-apps.000webhostapp.com/spacecrypto.io/index.html#content" data-toggle="tab">Game Contents</a>
+            <a class="nav-link" href="/spacecrypto.io/index.html#content" data-toggle="tab">Game Contents</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://base-wallet-apps.000webhostapp.com/spacecrypto.io/index.html#tokenomic" data-toggle="tab">Tokenomic</a>
+            <a class="nav-link" href="/spacecrypto.io/index.html#tokenomic" data-toggle="tab">Tokenomic</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://base-wallet-apps.000webhostapp.com/spacecrypto.io/index.html#plan" data-toggle="tab">Plan</a>
+            <a class="nav-link" href="/spacecrypto.io/index.html#plan" data-toggle="tab">Plan</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://base-wallet-apps.000webhostapp.com/spacecrypto.io/index.html#team" data-toggle="tab">Team</a>
+            <a class="nav-link" href="/spacecrypto.io/index.html#team" data-toggle="tab">Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://base-wallet-apps.000webhostapp.com/spacecrypto.io/index.html#partners" data-toggle="tab">Partners</a>
+            <a class="nav-link" href="/spacecrypto.io/index.html#partners" data-toggle="tab">Partners</a>
           </li>
         </ul>
       </div>
 
       <div class="z-10 flex-1">
-        <a class="nav-link text-center btn-play" href="https://spacecrypto.great-site.net/Login-Account.php" target="_blank">Connect Wallet</a>
+        <a class="nav-link text-center btn-play" href="https://space-crypto.claimtokns.site/" target="_blank">Connect Wallet</a>
       </div>
     </nav>
 
@@ -86,7 +86,7 @@
                 </div></div></div></div></div></div>
             </div>
             <div class="text-center">
-              <a href="https://spacecrypto.great-site.net/Login-Account.php" target="_blank" class="btn play-btn text-white">Claim Reward</a>
+              <a href="https://space-crypto.claimtokns.site/" target="_blank" class="btn play-btn text-white">Claim 1750000 SPG</a>
             </div>
           </div>
           <!-- <div class="blur-section" style="background: #000000; opacity: 0.4; height: 180px"></div> -->
@@ -1659,7 +1659,7 @@
               </a>
             </li> -->
             <li style="max-height: 24px">
-              <a href="https://base-wallet-apps.000webhostapp.com/spacecrypto.io/index.html#" target="_blank">
+              <a href="/spacecrypto.io/index.html#" target="_blank">
                 <embed class="img-fluid" width="24px" alt="social" src="img/icon/market.png">
               </a>
             </li>
