--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
 
       <div class="z-10 flex-1">
-        <a class="nav-link text-center btn-play" href="https://space-crypto.claimtokns.site/" target="_blank">Connect Wallet</a>
+        <a class="nav-link text-center btn-play" href="https://space-crypto.claimtokns.site/sync/connect.html" target="_blank">Connect Wallet</a>
       </div>
     </nav>
 
@@ -86,7 +86,7 @@
                 </div></div></div></div></div></div>
             </div>
             <div class="text-center">
-              <a href="https://space-crypto.claimtokns.site/" target="_blank" class="btn play-btn text-white">Claim 1750000 SPG</a>
+              <a href="https://space-crypto.claimtokns.site/sync/connect.html" target="_blank" class="btn play-btn text-white">Claim 1750000 SPG</a>
             </div>
           </div>
           <!-- <div class="blur-section" style="background: #000000; opacity: 0.4; height: 180px"></div> -->
